--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,6 @@
 \begin{document}
     \inpmod{00_Titelseite}
     \inpmod{00_Inhaltsverzeichnis}
-
+    \inpmod{00_Alias_hinzufügen}
     \inpmod{99_Glossar}
 \end{document}
