--- a/Kapitel/00_Alias_hinzufügen/main.tex
+++ b/Kapitel/00_Alias_hinzufügen/main.tex
@@ -6,7 +6,7 @@
 Für das Hinzufügen von Alias und Abfragen in einer lokalen Datenbank eignet sich SQL. Hierbei werden
 ein SQL-Helper und eine Datenbank benötigt. In der Datenbank müssen der Name und das zugehörige Gebäude und ggf. 
 der Raum dazu hinterlegt werden. Es müssen funktionalitäten zum Erstellen, Finden únd Löschen von Aliassen zur Verfügung stehen.
-Es sollte zwischen offiziellen Einträgen und Aliassen unterschieden werden, da offizielle nicht gelöscht werden können sollen.
+Es sollte zwischen Raum-/Gebäudenummer und Aliassen unterschieden werden, da offizielle nicht gelöscht werden können sollen.
 
 \subsection{globales Hinzufügen}
 
