Add class 'AliasQuery' to section 'Backend'

--- a/Kapitel/00_Backend/main.tex
+++ b/Kapitel/00_Backend/main.tex
@@ -1,7 +1,9 @@
 \newpage
 \section{Backend}
 
-\begin{figure}[H]
-    \caption{}
-    \relmermaid[width=13cm]{Klassendiagramm1}
-\end{figure}
+%\begin{figure}[H]
+%    \caption{}
+%    \relmermaid[width=13cm]{Klassendiagramm1}
+%\end{figure}
+
+\inprelmod{AliasQuery}
