Added class Search in Suchfunktion.

--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -1,1 +1,7 @@
-\paragraph{Klassen}
+\section{Search}
+\paragraph*{Kurzbeschreibung}
+This class enables the search of buildings and rooms via a String input in a text field.
+\paragraph*{Beschreibung}
+This class enables the search of buildings and rooms via a String input in a text field, 
+than can be a building number, building number and room number, alias or person.
+Shows a list of suggestions, if available, and allows the user to pick a suggestion or enter the input completely themselves.
