Added methode createHashMapOfSearchables in class Search in Suchfunktion.

--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -5,3 +5,16 @@ This class enables the search of buildings and rooms via a String input in a tex
 This class enables the search of buildings and rooms via a String input in a text field, 
 than can be a building number, building number and room number, alias or person.
 Shows a list of suggestions, if available, and allows the user to pick a suggestion or enter the input completely themselves.
+
+\subsection{createHashMapOfSearchables}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns a hash map of searchables with keys.
+\paragraph*{Beschreibung}
+This methode determines all searchables(buildings, rooms, persons) and all keys that determine them. 
+They are put in a hash map that is returned.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item list of all buildings
+\end{itemize}
+\paragraph*{Rückgabewert}
+hash map of searchables
