Added methode createListOfSearchKeys in Search in Suchfunktion.

--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -18,3 +18,15 @@ They are put in a hash map that is returned.
 \end{itemize}
 \paragraph*{Rückgabewert}
 hash map of searchables
+
+\subsection{createListOfSearchKeys}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns a list of search keys of the given hash map of searchables.
+\paragraph*{Beschreibung}
+This methode extractes all keys of the hash map and puts them in a list that is returned.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item hash map of searchables
+\end{itemize}
+\paragraph*{Rückgabewert}
+list of the search keys
