Added methode getSearchable in class Search in Suchfunktion.

--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -45,3 +45,16 @@ Shows a list of suggestions(the search keys), if available, and allows the user 
 search key that the user inserted
 \paragraph*{Notizen zur Implementierung}
 Uses a search widget(https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity).
+
+\subsection{getSearchable}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the searchable belonging to the search key.
+\paragraph*{Beschreibung}
+This class determines the searchable belonging to the search key and returns it.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item hash map of searchables
+    \item search key
+\end{itemize}
+\paragraph*{Rückgabewert}
+searchable
