Added Folder Grundbausteine for basic classes.

--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -5,6 +5,8 @@ This class enables the search of buildings and rooms via a String input in a tex
 This class enables the search of buildings and rooms via a String input in a text field, 
 than can be a building number, building number and room number, alias or person.
 Shows a list of suggestions, if available, and allows the user to pick a suggestion or enter the input completely themselves.
+\paragraph*{Anmerkung}
+The class is only used lokaly in the application without any connection to the server.
 
 \subsection{createHashMapOfSearchables}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -58,3 +60,4 @@ This class determines the searchable belonging to the search key and returns it.
 \end{itemize}
 \paragraph*{Rückgabewert}
 searchable
+
