Added methode getIdentifier in class Alias in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -6,3 +6,13 @@ An alternate identifier for a building or room.
 With it users can search for buildings without a building number and for rooms without a building number and a room number.
 \paragraph*{Anmerkung}
 Alias can be lokal (user added alias for himself) or global (alias was suggested by a user and added by an admin for all users).
+
+\subsection{getIdentifier}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the identifier of the alias.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+identifier
