Added class Person in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -16,3 +16,12 @@ This methode returns the identifier of the alias.
 \end{itemize}
 \paragraph*{Rückgabewert}
 identifier
+
+
+\section{Person}
+\paragraph*{Kurzbeschreibung}
+An person that has an office in a building.
+\paragraph*{Beschreibung}
+An person that has an office in a building. The name of the person works as an alternate identifier of a room.
+\paragraph*{Anmerkung}
+Person is only stored at the server. (?)
