Added methode getName in class Person in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -25,3 +25,13 @@ An person that has an office in a building.
 An person that has an office in a building. The name of the person works as an alternate identifier of a room.
 \paragraph*{Anmerkung}
 Person is only stored at the server. (?)
+
+\subsection{getName}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the full name of the person including the title.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+name
