--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -6,7 +6,7 @@ This class enables the search of buildings and rooms via a String input in a tex
 than can be a building number, building number and room number, alias or person.
 Shows a list of suggestions, if available, and allows the user to pick a suggestion or enter the input completely themselves.
 \paragraph*{Anmerkung}
-The class is only used lokaly in the application without any connection to the server.
+The class is only used local in the application without any connection to the server.
 
 \subsection{createHashMapOfSearchables}%$$$M
 \paragraph*{Kurzbeschreibung}
