Added class BuildingNumber in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -61,3 +61,12 @@ This methode returns the neccessary information to determine the position of a b
 \end{itemize}
 \paragraph*{Rückgabewert}
 position
+
+
+\section{BuildingNumber}
+\paragraph*{Kurzbeschreibung}
+The number of a building.
+\paragraph*{Beschreibung}
+The number of a building consisting of two integers seperated by a dot: "int1.int2".
+\paragraph*{Anmerkung}
+The building numbers are stored local and on the server.
