Added methode getBuildingNumber in class BuildingNumber in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -70,3 +70,15 @@ The number of a building.
 The number of a building consisting of two integers seperated by a dot: "int1.int2".
 \paragraph*{Anmerkung}
 The building numbers are stored local and on the server.
+
+\subsection{getBuildingNumber}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the building number of the building.
+\paragraph*{Beschreibung}
+This methode returns the building number of the building as a String consisting of the two integers seperated by a dot.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+building number
