Added class RoomNumber in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -82,3 +82,11 @@ This methode returns the building number of the building as a String consisting 
 \end{itemize}
 \paragraph*{Rückgabewert}
 building number
+
+\section{RoomNumber}
+\paragraph*{Kurzbeschreibung}
+The number of a room.
+\paragraph*{Beschreibung}
+The number of a building consisting of an integers.
+\paragraph*{Anmerkung}
+The room numbers are stored local and on the server.
