Added methode getRoomNumber in class RoomNumber in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -83,10 +83,23 @@ This methode returns the building number of the building as a String consisting 
 \paragraph*{Rückgabewert}
 building number
 
+
 \section{RoomNumber}
 \paragraph*{Kurzbeschreibung}
 The number of a room.
 \paragraph*{Beschreibung}
-The number of a building consisting of an integers.
+The number of a building consisting of an integer.
 \paragraph*{Anmerkung}
 The room numbers are stored local and on the server.
+
+\subsection{getRoomNumber}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the room number of the room.
+\paragraph*{Beschreibung}
+This methode returns the room number of the room as an integer.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+room number
