Added class Building in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -103,3 +103,12 @@ This methode returns the room number of the room as an integer.
 \end{itemize}
 \paragraph*{Rückgabewert}
 room number
+
+
+\section{Building}
+\paragraph*{Kurzbeschreibung}
+A building on the campus.
+\paragraph*{Beschreibung}
+A building on the campus that can be serched for in the app.
+\paragraph*{Anmerkung}
+The buildings are stored local and on the server.
