Added methode getAddress in class Building in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -113,6 +113,18 @@ A building with rooms that can be searched for in the app.
 \paragraph*{Anmerkung}
 The buildings are stored local and on the server.
 
+\subsection{getAddress}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the address.
+\paragraph*{Beschreibung}
+This methode returns the address of the building.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+address
+
 \subsection{getRooms}%$$$M
 \paragraph*{Kurzbeschreibung}
 This methode returns a list of rooms.
