Added methode getBuildingNumber to class Building in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -125,6 +125,18 @@ This methode returns the address of the building.
 \paragraph*{Rückgabewert}
 address
 
+\subsection{getBuildingNumber}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the building number.
+\paragraph*{Beschreibung}
+This methode returns the building number of the building.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+building number
+
 \subsection{getRooms}%$$$M
 \paragraph*{Kurzbeschreibung}
 This methode returns a list of rooms.
