Added class Room in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -148,3 +148,12 @@ This methode returns a list of rooms of the building.
 \end{itemize}
 \paragraph*{Rückgabewert}
 list of rooms
+
+
+\section{Room}
+\paragraph*{Kurzbeschreibung}
+A room.
+\paragraph*{Beschreibung}
+A room that can be searched for in the app.
+\paragraph*{Anmerkung}
+The rooms are stored local and on the server.
