Added methode getRoomNumber in class Room in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -157,3 +157,15 @@ A room.
 A room that can be searched for in the app.
 \paragraph*{Anmerkung}
 The rooms are stored local and on the server.
+
+\subsection{getRoomNumber}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the room number.
+\paragraph*{Beschreibung}
+This methode returns the room number of the room.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+room number
