Added methode getBuilding in class Room in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -169,3 +169,15 @@ This methode returns the room number of the room.
 \end{itemize}
 \paragraph*{Rückgabewert}
 room number
+
+\subsection{getBuilding}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns the building.
+\paragraph*{Beschreibung}
+This methode returns the building the room is in.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+building
