Rename parameter names of methods in 'AliasQuery'

--- a/Kapitel/00_Backend/AliasQuery/getAlias_mapID,userID_ListAlias/main.tex
+++ b/Kapitel/00_Backend/AliasQuery/getAlias_mapID,userID_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{getAlias(mapID : int, userID : int) : List<Alias> aliasse}}%$$$M
+\subsubsection{\texttt{getAlias(mapID : int, userID : int) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurück.
 \paragraph*{Beschreibung}
