--- a/Kapitel/00_Backend/main.tex
+++ b/Kapitel/00_Backend/main.tex
@@ -7,6 +7,7 @@
 %\end{figure}
 
 \inprelmod{AliasMutation}
+\inprelmod{AliasSuggestionMutation}
 \inpremod{UserMutation}
 \inprelmod{AliasQuery}
 \inprelmod{AliasSuggestionQuery}
