Change explicit var types to more general var types
Change for example ID parameters that
were of type int or long to a more general
object for better abstraction and
increased flexibility.

--- a/Kapitel/00_Backend/AliasMutation/removeAlias_AliasID_boolean/main.tex
+++ b/Kapitel/00_Backend/AliasMutation/removeAlias_AliasID_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{removeAlias(aliasID : long) : boolean}}%$$$M
+\subsubsection{\texttt{removeAlias(aliasID : AliasID) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Entfernt einen globalen Alias aus der Datenbank.
 \paragraph*{Beschreibung}
@@ -8,7 +8,7 @@ Dies hat zur Folge, dass das entsprechende Kartenobjekt nicht mehr durch diesen,
 Hierfür wird die ID des gewünschten globalen Aliasses übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item aliasID : long
+    \item aliasID : AliasID
     		\paragraph*{Beschreibung}
     		Die ID des globalen Aliasses, den man entfernen möchte.
 \end{itemize}
