--- a/Kapitel/00_Backend/AliasQuery/getAlias_MapID_ListAlias/main.tex
+++ b/Kapitel/00_Backend/AliasQuery/getAlias_MapID_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{getAlias(mapID : int) : List<Alias> aliases}}%$$$M
+\subsubsection{\texttt{getAlias(mapID : MapID) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse des gewünschten Kartenobjekts zurück.
 \paragraph*{Beschreibung}
@@ -7,7 +7,7 @@ Die Methode ermöglicht, dass ein Administrator eine Liste aus allen Aliassen ei
 Hierfür wird die ID des gewünschten Kartenobjekts übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapID : int
+    \item mapID : MapID
     		\paragraph*{Beschreibung}
     		Die ID des Kartenobjekts, dessen Aliasse man zurückgegeben haben möchte.
 \end{itemize}
