--- a/Kapitel/00_Backend/AliasQuery/main.tex
+++ b/Kapitel/00_Backend/AliasQuery/main.tex
@@ -1,4 +1,4 @@
 \subsection{AliasQuery}
 
-\inprelmod{getAlias_mapID_ListAlias}
-\inprelmod{getAlias_mapID,userID_ListAlias}
+\inprelmod{getAlias_MapID_ListAlias}
+\inprelmod{getAlias_MapID,UserID_ListAlias}
