--- a/Kapitel/00_Backend/UserQuery/getUser_UserID_User/main.tex
+++ b/Kapitel/00_Backend/UserQuery/getUser_UserID_User/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{getUser(id : userID) : User}}%$$$M
+\subsubsection{\texttt{getUser(userID : UserID) : User}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt den gewünschten Benutzer zurück.
 \paragraph*{Beschreibung}
@@ -7,7 +7,7 @@ Die Methode ermöglicht, dass ein Administrator nach einem gewünschten Benutzer
 Hierfür wird dementsprechend die ID des gewünschten Benutzers übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item id : userID
+    \item userID : UserID
     		\paragraph*{Beschreibung}
     		Die ID des gewünschten Benutzers, den man zurückgegeben haben möchte.
 \end{itemize}
