Enhance javadoc for method 'removeAliasSuggestion_String_boolean'

--- a/Kapitel/00_Backend/AliasSuggestionMutation/removeAliasSuggestion_String_boolean/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/removeAliasSuggestion_String_boolean/main.tex
@@ -8,7 +8,7 @@ Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Ange
 \begin{itemize}
 	\item name : String
 		\paragraph*{Beschreibung}
-		Der Name, d.h. die Zeichenkette, des gewünschten Alias-Vorschlags.
+		Der Name, d.h. die Zeichenkette, des gewünschten, zu löschenden Alias-Vorschlags.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn der gewünschte Alias-Vorschlag erfolgreich aus der Datenbank gelöscht werden konnte, ansonsten falsch.
