Add method to 'main.tex' of class 'AliasSuggestionMutation'

--- a/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
@@ -1,4 +1,5 @@
 \subsection{AliasSuggestionMutation}
 
+\inprelmod{acceptAliasSuggestion_AliasSuggestionID_boolean}
 \inprelmod{removeAliasSuggestion_String_boolean}
 \inprelmod{removeAliasSuggestion_AliasSuggestionID_boolean}
