--- a/Kapitel/00_Backend/AliasSuggestionMutation/approveAliasSuggestion_AliasSuggestionID_boolean/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/approveAliasSuggestion_AliasSuggestionID_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{acceptAliasSuggestion(aliasSuggestionID: AliasSuggestionID) : boolean}}%$$$M
+\subsubsection{\texttt{approveAliasSuggestion(aliasSuggestionID: AliasSuggestionID) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Akzeptiert den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
