Add method to 'main.tex' of class 'AliasSuggestionMutation'

--- a/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
@@ -1,5 +1,6 @@
 \subsection{AliasSuggestionMutation}
 
 \inprelmod{approveAliasSuggestion_AliasSuggestionID_boolean}
+\inprelmod{approveAliasSuggestion_String_boolean}
 \inprelmod{disapproveAliasSuggestion_String_boolean}
 \inprelmod{disapproveAliasSuggestion_AliasSuggestionID_boolean}
