Rename parameters of methods in 'Backend'

--- a/Kapitel/00_Backend/AliasSuggestionMutation/approveAliasSuggestion_String_boolean/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/approveAliasSuggestion_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{approveAliasSuggestion(name: String) : boolean}}%$$$M
+\subsubsection{\texttt{approveAliasSuggestion(aliasSuggestion: String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Akzeptiert den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
@@ -7,7 +7,7 @@ Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Ange
 Dies hat zur Folge, dass der angenommene Alias-Vorschlag in die Alias-Datenbank aufgenommen wird.
 \paragraph*{Parameter}
 \begin{itemize}
-	\item name : String
+	\item aliasSuggestion : String
 		\paragraph*{Beschreibung}
 		Die Zeichenkette des gewünschten, zu akzeptierenden Alias-Vorschlags.
 \end{itemize}
