--- a/Kapitel/00_Backend/AliasSuggestionMutation/disapproveAliasSuggestion_String_boolean/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/disapproveAliasSuggestion_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{disaproveAliasSuggestion(name : String) : boolean}}%$$$M
+\subsubsection{\texttt{disaproveAliasSuggestion(aliasSuggestion : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Lehnt den gewünschten Alias-Vorschlag ab.
 \paragraph*{Beschreibung}
@@ -6,7 +6,7 @@ Die Methode ist ausschließlich von Administratoren aufzurufen.
 Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette ablehnen kann.
 \paragraph*{Parameter}
 \begin{itemize}
-	\item name : String
+	\item aliasSuggestion : String
 		\paragraph*{Beschreibung}
 		Der Name, d.h. die Zeichenkette, des gewünschten, zu ablehnenden Alias-Vorschlags.
 \end{itemize}
