--- a/Kapitel/00_Backend/UserMutation/addUser_String_UserID/main.tex
+++ b/Kapitel/00_Backend/UserMutation/addUser_String_UserID/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{addUser(name : String) : userID}}%$$$M
+\subsubsection{\texttt{addUser(user : String) : UserID}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Fügt einen neuen Benutzer zur Datenbank hinzu.
 \paragraph*{Beschreibung}
@@ -7,7 +7,7 @@ Die Methode ermöglicht, dass ein Administrator einen neuen Benutzer zur Datenba
 Hierfür wird der Name des gewünschten Benutzers übergeben..
 \paragraph*{Parameter}
 \begin{itemize}
-    \item name : String
+    \item user : String
     		\paragraph*{Beschreibung}
     		Der Name des gewünschten Benutzers, den man zur Datenbank hinzufügen möchte.
 \end{itemize}
