--- a/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
@@ -4,3 +4,4 @@
 \inprelmod{approveAliasSuggestion_String_boolean}
 \inprelmod{disapproveAliasSuggestion_String_boolean}
 \inprelmod{disapproveAliasSuggestion_AliasSuggestionID_boolean}
+\inprelmod{suggestAlias_String,String,MapID_boolean}
