--- a/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/AliasSuggestionMutation/main.tex
@@ -5,3 +5,4 @@
 \inprelmod{disapproveAliasSuggestion_String_boolean}
 \inprelmod{disapproveAliasSuggestion_AliasSuggestionID_boolean}
 \inprelmod{suggestAlias_String,String,MapID_boolean}
+\inprelmod{evaluateAliasSuggestion_AliasSuggestionID,UserID,boolean_boolean}
