Add directories of packages in 'Backend'
Move directories of classes to their
respective package.

--- a/Kapitel/00_Backend/main.tex
+++ b/Kapitel/00_Backend/main.tex
@@ -6,9 +6,5 @@
 %    \relmermaid[width=13cm]{Klassendiagramm1}
 %\end{figure}
 
-\inprelmod{AliasMutation}
-\inprelmod{AliasSuggestionMutation}
-\inpremod{UserMutation}
-\inprelmod{AliasQuery}
-\inprelmod{AliasSuggestionQuery}
-\inpremod{UserQuery}
+\inprelmod{MutationResolver}
+\inprelmod{QueryResolver}
