--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -8,6 +8,18 @@ With it users can search for buildings without a building number and for rooms w
 Alias can be local (user added alias for himself) or global (alias was suggested by a user and added by an admin for all users).
 The aliases are stored local and on the server.
 
+\subsection{isLocal}%$$$M
+\paragraph*{Kurzbeschreibung}
+This methode returns whether the alias is lokal or not.
+\paragraph*{Beschreibung}
+This methode returns whether the alias is lokal(true) or not(false).
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+whether the alias is lokal
+
 \subsection{getIdentifier}%$$$M
 \paragraph*{Kurzbeschreibung}
 This methode returns the identifier of the alias.
