Completed new methodes.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -33,7 +33,16 @@ This methode returns the identifier of the alias.
 identifier
 
 \subsection{getMapId}
-
+\paragraph*{Kurzbeschreibung}
+This methode returns the mapId of the alias.
+\paragraph*{Beschreibung}
+This methode returns the mapId of the alias.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+mapId
 
 \section{Person}
 \paragraph*{Kurzbeschreibung}
@@ -56,7 +65,16 @@ This methode returns the full name of the person including the title in the orde
 name
 
 \subsection{getMapId}
-
+\paragraph*{Kurzbeschreibung}
+This methode returns the mapId of the person.
+\paragraph*{Beschreibung}
+This methode returns the mapId of the person.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+mapId
 
 \section{Building}
 \paragraph*{Kurzbeschreibung}
@@ -77,7 +95,56 @@ The rooms are stored local and on the server.
 
 
 \section{MapObject}
+\paragraph*{Kurzbeschreibung}
+A map object.
+\paragraph*{Beschreibung}
+A map object that can be searched for in the app.
+\paragraph*{Anmerkung}
+The map objects are stored local and on the server.
+
 \subsection{getAdditionalData}
+This methode returns the additional of the map object.
+\paragraph*{Beschreibung}
+This methode returns the additional of the map object.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+additional data
+
 \subsection{getOfficialName}
+\paragraph*{Kurzbeschreibung}
+This methode returns the offical name of the map object.
+\paragraph*{Beschreibung}
+This methode returns the offical name of the map object.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+officialName
+
 \subsection{getMapId}
+\paragraph*{Kurzbeschreibung}
+This methode returns the map id of the map object.
+\paragraph*{Beschreibung}
+This methode returns the map id of the map object.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+map id
+
 \subsection{getGeocoding}
+\paragraph*{Kurzbeschreibung}
+This methode returns the geocoding of the map object.
+\paragraph*{Beschreibung}
+This methode returns the geocoding of the map object.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item none
+\end{itemize}
+\paragraph*{Rückgabewert}
+geocoding
